force-app/main/default/objects/ClickSignLog__c/ClickSignLog__c.object-meta.xml
<CustomObject>
    <label>ClickSignLog</label>
    <nameField>
        <label>Nome de ClickSign Log</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClickSignLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>