force-app/main/default/objects/ClickSignLog__c/fields/RequestURI__c.field-meta.xml
<CustomField>
    <fullName>RequestURI__c</fullName>
    <description>API Custom - URI da Requisição</description>
    <label>Request URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>