force-app/main/default/objects/ClickSignLog__c/fields/ResponseBody__c.field-meta.xml
<CustomField>
    <fullName>ResponseBody__c</fullName>
    <description>Callout - Corpo da Response</description>
    <label>Response Body</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>