force-app/main/default/objects/ClickSignLog__c/fields/StackTraceString__c.field-meta.xml
<CustomField>
    <fullName>StackTraceString__c</fullName>
    <description>Exceções gerais - Pilha de erro</description>
    <label>Stack Trace String</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>