force-app/main/default/objects/ClickSignLog__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <description>Callout - Código do Status</description>
    <label>Status Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>