force-app/main/default/objects/ClickSignLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>HTTPMethod__c</columns>
    <columns>Message__c</columns>
    <columns>Method__c</columns>
    <columns>RequestBody__c</columns>
    <columns>RequestURI__c</columns>
    <columns>ResponseBody__c</columns>
    <columns>Status__c</columns>
    <columns>StatusCode__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>